fix: align the center part

--- a/components/menu/index.less
+++ b/components/menu/index.less
@@ -267,7 +267,7 @@
 
 			&.centerpart{
 				padding-right: 0;
-				padding-left: 0;
+				padding-left: 6 * @rhythm;
 			}
 
 			&.leftpart{
